ns-gce uses new key

--- a/env/config
+++ b/env/config
@@ -42,7 +42,7 @@ Host bosh-gce
 Host ns-gce
 	HostName ns-gce.nono.io
 	User vcap
-	IdentityFile ~/.ssh/google
+	IdentityFile ~/.ssh/bosh_deployment
 	ForwardAgent yes
 	UserKnownHostsFile /dev/null
 
