--- a/env/config
+++ b/env/config
@@ -39,6 +39,13 @@ Host bosh-gce
 	ForwardAgent yes
 	UserKnownHostsFile /dev/null
 
+Host bosh-lite
+	HostName  bosh-lite.nono.io
+	User jumpbox
+	IdentityFile ~/.ssh/bosh_deployment
+	ForwardAgent yes
+	UserKnownHostsFile /dev/null
+
 Host ns-gce
 	HostName ns-gce.nono.io
 	User vcap
