Don't remember om.nono.io's key
Operations Manager is ephemeral; I'll frequently redeploy. Don't
remember the key.

--- a/env/config
+++ b/env/config
@@ -96,6 +96,7 @@ Host om om.nono.io
 	HostName om.nono.io
 	User ubuntu
 	IdentityFile ~/.ssh/nono
+	UserKnownHostsFile /dev/null
 
 Host shay
 	HostName shay.nono.io
