--- a/env/config
+++ b/env/config
@@ -40,9 +40,9 @@ Host bosh-gce
 	UserKnownHostsFile /dev/null
 
 Host bosh-vsphere
-	HostName  bosh-vsphere.nono.io
+	HostName  10.2.0.250
 	User jumpbox
-	IdentityFile ~/.ssh/nono
+	IdentityFile ~/.ssh/bosh_deployment_key_no_ecdsa
 	ForwardAgent yes
 	UserKnownHostsFile /dev/null
 
