--- a/env/config
+++ b/env/config
@@ -14,6 +14,12 @@ Host nono.com nono.io
 	IdentityFile ~/.ssh/nono
 	ForwardAgent yes
 
+Host algorand
+	HostName algorand.nono.io
+	User algorand
+	IdentityFile ~/.ssh/nono
+	ForwardAgent yes
+
 Host bitbucket.org
 	User git
 	IdentityFile ~/.ssh/github
