Welcome new firewall, paris.nono.io

--- a/env/config
+++ b/env/config
@@ -121,6 +121,12 @@ Host om om.nono.io
 	IdentityFile ~/.ssh/nono
 	UserKnownHostsFile /dev/null
 
+Host paris paris.diarizer.com
+	HostName paris.nono.io
+	User cunnie
+	IdentityFile ~/.ssh/nono
+	ForwardAgent yes
+
 Host test test.diarizer.com
 	Hostname test.diarizer.com
 	User cunnie
