ssh: haas-200 have updated configs

--- a/env/config
+++ b/env/config
@@ -146,24 +146,42 @@ Host vain
 	ForwardAgent yes
 
 # work
+
+# append these entries to your local `ssh_config`
+#
+# GOTCHA: first ssh attempt will fail with `Connection closed by ....`, try again
+
 Host haas-200
-  HostName 10.193.141.240
+  HostName bosh-concourse.haas-200.pez.pivotal.io
   User pivotal
   UserKnownHostsFile /dev/null
+  StrictHostKeyChecking no
   RequestTTY force
   RemoteCommand ssh ubuntu@opsmgr-01.haas-200.pez.pivotal.io
-Host haas-223
-  HostName 10.193.177.240
+
+Host haas-237
+  HostName bosh-concourse.haas-237.pez.pivotal.io
   User pivotal
   UserKnownHostsFile /dev/null
+  StrictHostKeyChecking no
   RequestTTY force
-  RemoteCommand ssh ubuntu@opsmgr-01.haas-223.pez.pivotal.io
+  RemoteCommand ssh ubuntu@opsmgr-01.haas-237.pez.pivotal.io
+
 Host haas-241
-  HostName 10.193.159.240
+  HostName bosh-concourse.haas-241.pez.pivotal.io
   User pivotal
   UserKnownHostsFile /dev/null
+  StrictHostKeyChecking no
   RequestTTY force
   RemoteCommand ssh ubuntu@opsmgr-01.haas-241.pez.pivotal.io
+
+Host haas-256
+  HostName bosh-concourse.haas-256.pez.pivotal.io
+  User pivotal
+  UserKnownHostsFile /dev/null
+  StrictHostKeyChecking no
+  RequestTTY force
+  RemoteCommand ssh ubuntu@opsmgr-01.haas-256.pez.pivotal.io
 
 # wildcards at bottom, otherwise they trump
 Host *.nono.io
