--- a/env/config
+++ b/env/config
@@ -38,7 +38,7 @@ Host bosh-lite
 	UserKnownHostsFile /dev/null
 
 Host diarizer diarizer.com
-	HostName  diarizer.com
+	HostName  diarizer.nono.io
 	Port 22
 	ForwardAgent yes
 	IdentityFile ~/.ssh/nono
