--- a/env/config
+++ b/env/config
@@ -77,6 +77,11 @@ Host home
 	IdentityFile ~/.ssh/nono
 	ForwardAgent yes
 
+Host minikube minikube.nono.io
+	HostName minikube.nono.io
+	IdentityFile ~/.ssh/nono
+	ForwardAgent yes
+
 Host nas nas.nono.io
 	HostName nas.nono.io
 	User root
