SSH: "fed" replaces "fedora"
Fedora's disk was too small, kept running out of space during `bosh
create-env``, couldn't run `gobonniego` without panicking.

--- a/env/config
+++ b/env/config
@@ -63,8 +63,8 @@ Host esxi-2
 	HostName esxi-2.nono.io
 	User root
 
-Host fedora
-	HostName fedora.nono.io
+Host fedora fed
+	HostName fed.nono.io
 	IdentityFile ~/.ssh/nono
 	ForwardAgent yes
 
