SSH Config: bring back ESXi #0
We're doing the grand musical chairs of ESXi hosts: we're bringing in
esxi-2, so we're demoting 1→0, 2→1.

--- a/env/config
+++ b/env/config
@@ -55,6 +55,10 @@ Host diarizer diarizer.com
 	ForwardAgent yes
 	IdentityFile ~/.ssh/nono
 
+Host esxi-0
+	HostName esxi-0.nono.io
+	User root
+
 Host esxi-1
 	HostName esxi-1.nono.io
 	User root
