Update sslip.io DNS server 2.7.0 → 3.0.0
Also, om.tas.nono.io uses the team-generic key so that my teammates can
ssh into my ops-manager without needing my ssh key.

--- a/env/config
+++ b/env/config
@@ -150,7 +150,7 @@ Host nsx
 Host om om.tas.nono.io
 	HostName om.tas.nono.io
 	User ubuntu
-	IdentityFile ~/.ssh/nono
+	IdentityFile ~/workspace/ops-manager/assets/bosh.pem
 	UserKnownHostsFile /dev/null
 
 Host test test.diarizer.com
