SSH: ns-digitalocean is dead, long live ns-vultr!
Digital Ocean doesn't do FreeBSD any more, but Vultr does.

--- a/env/config
+++ b/env/config
@@ -135,18 +135,18 @@ Host ns-azure
 	ForwardAgent yes
 	UserKnownHostsFile /dev/null
 
-Host ns-digitalocean
-	HostName ns-digitalocean.nono.io
-	User freebsd
-	IdentityFile ~/.ssh/nono
-	ForwardAgent yes
-
 Host ns-gce
 	HostName ns-gce.nono.io
 	User cunnie
 	IdentityFile ~/.ssh/nono
 	ForwardAgent yes
 	UserKnownHostsFile /dev/null
+
+Host ns-vultr
+	HostName ns-vultr.nono.io
+	User cunnie
+	IdentityFile ~/.ssh/nono
+	ForwardAgent yes
 
 Host nsx
 	HostName nsx.nono.io
