ssh config: +demo
So I can select it from a menu on VS Code

--- a/env/config
+++ b/env/config
@@ -36,6 +36,12 @@ Host centos
 	IdentityFile ~/.ssh/nono
 	ForwardAgent yes
 
+Host demo
+  HostName demo.majestic-labs.ai
+	User cunnie
+	IdentityFile ~/.ssh/nono
+	ForwardAgent yes
+
 Host esxi-1
 	HostName esxi-1.nono.io
 	User root
